# type-inference

./: ChangeLog.md  README.md  hie.yaml  test  type-inference.cabal
src/: Env.hs  Lambda.hs  Main.hs  Parser.hs  Type.hs
