cabal-version:  1.12
name:           type-inference
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/leorigon/type-inference#readme>
homepage:       https://github.com/leorigon/type-inference#readme
bug-reports:    https://github.com/leorigon/type-inference/issues
author:         Leonardo Filipe Rigon
maintainer:     rigonnleo@gmail.com
copyright:      2017 Leonardo Filipe Rigon
license:        BSD3
license-file:   LICENSE
build-type:     Simple

executable type-inference
  ghc-options:      -O2
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Env, Type, Parser, Lambda
  build-depends:    base >= 4.7 && < 5,
                    array >= 0.5,
                    containers >= 0.5,
                    mtl >= 2.0,
                    parsec >= 3.1.14
  default-language: Haskell2010
